# shad

./: .env.example  .env.notebook  .gitignore  CLAUDE.md  COLLECTION_PIVOT.md  LICENSE  OBSIDIAN_PIVOT.md  PLAN.md  QMD_PIVOT.md  README.md  SPEC.md  docker-compose.yml  install.sh
services/shad-api/: .coverage  .env.local  Dockerfile  README.md  pyproject.toml
services/shad-api/src/shad/: __init__.py
services/shad-api/tests/: __init__.py  conftest.py  smoke_discipline_report.sh  test_bitemporal_record_factory.py  test_cache.py  test_conflict_resolution.py  test_consolidation.py  test_context_packets.py  test_decomposition.py  test_discipline_integration.py  test_discipline_planner.py  test_discipline_source_map.py  test_episodic_to_semantic_promotion.py  test_file_manifest.py  test_history_manager_stale_run_reconciliation.py  test_import_resolution.py  test_invalid_enum_values.py  test_invalid_promotion_rejection.py  test_iterative_refinement.py  test_last_accessed_at_update.py  test_llm_gemini.py  test_llm_provider_routing.py  test_manager_routing.py  test_mcp_client.py  test_memory_record_base_type_patterns.py  test_memory_record_consolidation.py  test_memory_record_contract.py  test_memory_record_edge_cases.py  test_memory_record_field_constraints.py  test_memory_record_json_roundtrip.py  test_memory_record_required_fields.py  test_memory_search_manager_edge_cases.py  test_memory_search_manager_single_type_filter.py  test_memory_type_filter_pipeline_integration.py  test_memory_type_rejection.py  test_memory_type_serialization.py  test_optional_field_defaults.py  test_pruning.py  test_rlm_engine.py  test_rlm_integration.py  (+32 more)
(+279 files in other folders)
